--- a/de/time/index.html
+++ b/de/time/index.html
@@ -598,14 +598,14 @@
                 </div>
               </section>
               <section>
-                <button type="submit" id="next-button" disabled="">
-                  Continue to personal details
+                                <button  type="submit" id="next-button" disabled="">
+                  <a href="/de/email/index.htm">Continue to personal details</a>
                 </button>
               </section>
             </div>
   
             <a
-              href="/en/checkout/index.htm"
+              href="/de/checkout/index.htm"
               id="previous-button"
               >Previous step</a
             >
