--- a/en/checkout/index.htm
+++ b/en/checkout/index.htm
@@ -182,7 +182,12 @@
                       <p class="fw-bold text-gray-600">Adult (18+)</p>
                     </div>
                     <div class="css-1td8fe">
-                      <button onclick="minussBtn()"id="for_minus_1" disabled="true" class="css-1o2mfsl">
+                      <button
+                        onclick="minussBtn()"
+                        id="for_minus_1"
+                        disabled="true"
+                        class="css-1o2mfsl"
+                      >
                         <svg width="1em" height="1em" viewBox="0 0 100 100">
                           <path
                             d="M72.5 55h-44a4.5 4.5 0 010-9h44a4.5 4.5 0 010 9"
@@ -208,7 +213,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="css-1cdby4x"> 
+                <div class="css-1cdby4x">
                   <div class="css-ypjt16" onclick="calenadry()">
                     <div class="css-gv637c">
                       <svg
@@ -255,7 +260,11 @@
                   </div>
                 </div>
                 <div class="css-1cdby4x">
-                  <button onclick="vistPage()" class="css-1f0p3fd" data-gtm="button">
+                  <button
+                    onclick="vistPage()"
+                    class="css-1f0p3fd"
+                    data-gtm="button"
+                  >
                     <span>Find tours</span>
                   </button>
                 </div>
@@ -278,7 +287,7 @@
             <div class="css-1th8wul">
               <div class="css-36mw94">
                 <div class="css-1i82ydo">
-                  <p class="fw-bold text-gray-600">Adult (18+)</p>
+                  <p class="fw-bold text-gray-600">Adulto (mayor de 18 años)</p>
                 </div>
                 <div class="css-1td8fe">
                   <button class="css-bcc8qj">
@@ -289,7 +298,7 @@
                         fill-rule="evenodd"
                       ></path>
                     </svg></button
-                  ><input type="number" class="css-1s1z98e" value="1" /><button
+                  ><input type="number" class="css-1s1z98e" value="3" /><button
                     class="css-bcc8qj"
                   >
                     <svg width="1em" height="1em" viewBox="0 0 100 100">
@@ -317,15 +326,15 @@
                     ></path></svg
                   ><input type="hidden" disabled="" value="" /><input
                     type="hidden"
-                    placeholder="Select a date"
+                    placeholder="Selecciona una fecha"
                     class="flatpickr-input" /><input
                     class="form-control input"
-                    placeholder="Select a date"
+                    placeholder="Selecciona una fecha"
                     tabindex="0"
                     type="text"
                     readonly="readonly" /></label
-                ><label class="css-tz2b7r">
-                  <div class="css-1kg9k60">Select a date</div>
+                ><label class="css-tz2b7r"
+                  ><div class="css-1kg9k60">Selecciona una fecha</div>
                   <svg
                     width="1em"
                     height="1em"
@@ -336,12 +345,11 @@
                       d="M11.476 4.337h3.65a1.157 1.157 0 000-2.313h-3.65a1.157 1.157 0 000 2.313zm-9.163 17.35H24.29v-10.41H2.313v10.41zm24.29-18.4v19.556c0 .64-.518 1.157-1.157 1.157H1.156A1.157 1.157 0 010 22.843V3.288c0-.639.518-1.264 1.157-1.264H3.86a1.157 1.157 0 010 2.313H2.313v4.916H24.29V4.337h-1.547a1.157 1.157 0 010-2.313h2.704c.639 0 1.156.625 1.156 1.264zm-7.808 3.308c.799 0 1.446-.648 1.446-1.446V1.446a1.446 1.446 0 00-2.892 0v3.703c0 .798.648 1.446 1.446 1.446zM6.361 5.149V1.446a1.446 1.446 0 112.892 0v3.703a1.446 1.446 0 01-2.892 0z"
                       fill="#13670B"
                       fill-rule="evenodd"
-                    ></path>
-                  </svg>
-                </label>
+                    ></path></svg
+                ></label>
               </div>
               <button class="css-wwukbx" data-gtm="button">
-                <span>Find tours</span>
+                <span>Encontrar visitas</span>
               </button>
             </div>
             <div>
