--- a/en/time/index.html
+++ b/en/time/index.html
@@ -12,12 +12,12 @@
     <div class="time_container">
         <div class="qoraa" onclick="Qoraa()"></div>
       <header class="site-header" href="">
-        <a class="logo" href="/en/index.htm"></a>
+        <a class="logo" href="./index.htm"></a>
         <ul class="steps">
           <li class="done">
             <div>
               <a
-                href="/en/checkout/index.htm"
+                href="./checkout/index.htm"
                 class="item"
               >
                 <span class="circle">1</span>
@@ -68,15 +68,13 @@
           </div>
           <div class="languages-selection">
             <ul class="languages">
-              <li><a href="/en/tickets/regular">English</a></li>
-              <li><a href="/nl/tickets/regular">Nederlands</a></li>
-              <li><a href="/de/tickets/regular">Deutsch</a></li>
-              <li><a href="/fr/tickets/regular">Français</a></li>
-              <li><a href="/es/tickets/regular">Español</a></li>
-              <li><a href="/it/tickets/regular">Italiano</a></li>
-              <li><a href="/ru/tickets/regular">русский</a></li>
-              <li><a href="/zh/tickets/regular">中文</a></li>
-              <li><a href="/pt/tickets/regular">Português</a></li>
+              <li><a href="/en/time/index.html">English</a></li>
+              <li><a href="/nl/time/index.html">Nederlands</a></li>
+              <li><a href="/de/time/index.html">Deutsch</a></li>
+              <li><a href="/fr/time/index.html">Français</a></li>
+              <li><a href="/es/time/index.html">Español</a></li>
+              <li><a href="/it/time/index.html">Italiano</a></li>
+              <li><a href="/pt/time/index.html">Português</a></li>
             </ul>
           </div>
         </div>
@@ -88,7 +86,7 @@
             <p>Check the available timeslots</p>
           </div>
         </div>
-        <form method="post" action="/en/personal-details/regular">
+        <form method="post" action="./personal-details/regular">
           <div class="page-content">
             <h2>Heineken<span class="super">®</span> tour</h2>
             <section id="ticket-selection" style="display: none">
@@ -178,7 +176,7 @@
                   <span class="discount-indicator valentine"></span>
                   <span
                     >Happy Valentine’s Day! Book your Heineken tour via
-                    <a href="/voucher/en/VALENTINE24">this link</a> and use the
+                    <a href="/voucher./VALENTINE24">this link</a> and use the
                     special code: VALENTINE24 to get 1+1 free.</span
                   >
                 </div>
@@ -187,7 +185,7 @@
                   <span
                     >Rooftop Wednesdays. Book your Heineken tour including
                     Rooftop access via
-                    <a href="/voucher/en/ROOFTOPWEDNESDAYS">this link</a> and
+                    <a href="/voucher./ROOFTOPWEDNESDAYS">this link</a> and
                     use the special code: ROOFTOPWEDNESDAYS to get 1+1 free on
                     selected timeslots.</span
                   >
@@ -578,7 +576,7 @@
                   <span class="discount-indicator valentine"></span>
                   <span
                     >Happy Valentine’s Day! Book your Heineken tour via
-                    <a href="/voucher/en/VALENTINE24">this link</a> and use the
+                    <a href="/voucher./VALENTINE24">this link</a> and use the
                     special code: VALENTINE24 to get 1+1 free.</span
                   >
                 </div>
@@ -587,7 +585,7 @@
                   <span
                     >Rooftop Wednesdays. Book your Heineken tour including
                     Rooftop access via
-                    <a href="/voucher/en/ROOFTOPWEDNESDAYS">this link</a> and
+                    <a href="/voucher./ROOFTOPWEDNESDAYS">this link</a> and
                     use the special code: ROOFTOPWEDNESDAYS to get 1+1 free on
                     selected timeslots.</span
                   >
@@ -603,14 +601,14 @@
               </div>
             </section>
             <section>
-              <button type="submit" id="next-button" disabled="">
-                <a href="/en//email/index.htm">Continue to personal details</a>
-              </button>
+                <button  type="submit" id="next-button" disabled="">
+                  <a href="./email/index.htm">Continue to personal details</a>
+                </button>
             </section>
           </div>
 
           <a
-            href="/en/checkout/index.htm"
+            href="./checkout/index.htm"
             id="previous-button"
             >Previous step</a
           >
@@ -631,39 +629,39 @@
                 <nav>
                   <ul>
                     <li>
-                      <a href="https://www.heinekenexperience.com/en/faqs/"
+                      <a href="https://www.heinekenexperience.com./faqs/"
                         >FAQ</a
                       >
                     </li>
                     <!-- class="faq-button" id="faq-button"-->
-                    <!--<li><a href="/en/about/">About the Experience</a></li>
-                                    <li><a href="/en/discover-our-tours/">Discover our tours</a></li>-->
+                    <!--<li><a href="./about/">About the Experience</a></li>
+                                    <li><a href="./discover-our-tours/">Discover our tours</a></li>-->
                     <li>
                       <a
-                        href="https://www.heinekenexperience.com/en/service-and-contact/"
+                        href="https://www.heinekenexperience.com./service-and-contact/"
                         >Service &amp; Contact</a
                       >
                     </li>
-                    <!--<li><a href="/en/meeting-events/">Meeting &amp; Events</a></li>-->
+                    <!--<li><a href="./meeting-events/">Meeting &amp; Events</a></li>-->
                   </ul>
 
                   <ul>
-                    <!--<li><a href="/en/privacy-policy/">Cookie Settings</a></li>-->
+                    <!--<li><a href="./privacy-policy/">Cookie Settings</a></li>-->
                     <li>
                       <a
-                        href="https://www.heinekenexperience.com/en/privacy-policy/"
+                        href="https://www.heinekenexperience.com./privacy-policy/"
                         >Privacy Policy</a
                       >
                     </li>
                     <li>
                       <a
-                        href="https://www.heinekenexperience.com/en/cookie-policy/"
+                        href="https://www.heinekenexperience.com./cookie-policy/"
                         >Cookie Policy</a
                       >
                     </li>
                     <li>
                       <a
-                        href="https://www.heinekenexperience.com/en/terms-and-conditions/"
+                        href="https://www.heinekenexperience.com./terms-and-conditions/"
                         target="_blank"
                         rel="noopener noreferrer"
                         >Terms &amp; Conditions</a
@@ -741,17 +739,15 @@
                   </svg>
               </div>
               <div class="languages-selection">
-                <ul class="languages">
-                  <li><a href="/en/tickets/regular">English</a></li>
-                  <li><a href="/nl/tickets/regular">Nederlands</a></li>
-                  <li><a href="/de/tickets/regular">Deutsch</a></li>
-                  <li><a href="/fr/tickets/regular">Français</a></li>
-                  <li><a href="/es/tickets/regular">Español</a></li>
-                  <li><a href="/it/tickets/regular">Italiano</a></li>
-                  <li><a href="/ru/tickets/regular">русский</a></li>
-                  <li><a href="/zh/tickets/regular">中文</a></li>
-                  <li><a href="/pt/tickets/regular">Português</a></li>
-                </ul>
+                  <ul class="languages">
+                    <li><a href="./time/index.html">English</a></li>
+                    <li><a href="/nl/time/index.html">Nederlands</a></li>
+                    <li><a href="/de/time/index.html">Deutsch</a></li>
+                    <li><a href="/fr/time/index.html">Français</a></li>
+                    <li><a href="/es/time/index.html">Español</a></li>
+                    <li><a href="/it/time/index.html">Italiano</a></li>
+                    <li><a href="/pt/time/index.html">Português</a></li>
+                  </ul>
               </div>
             </div>
           </div>
