--- a/es/payment/index.htm
+++ b/es/payment/index.htm
@@ -928,7 +928,7 @@ top: 158px;
                 <div>
                     <a href="#" class="item">
                         <span class="circle">1</span>
-                        <span class="text">Select tour</span>
+                        <span class="text">Selecciona la visita</span>
                     </a>
                 </div>
             </li>
@@ -936,7 +936,7 @@ top: 158px;
                 <div>
                     <a href="#" class="item">
                         <span class="circle">2</span>
-                        <span class="text">Select time</span>
+                        <span class="text">Selecciona la hora</span>
                     </a>
                 </div>
             </li>
@@ -944,7 +944,7 @@ top: 158px;
                 <div>
                     <a href="#" class="item">
                         <span class="circle">3</span>
-                        <span class="text">Personal details</span>
+                        <span class="text">Datos personales</span>
                     </a>
                 </div>
             </li>
@@ -952,7 +952,7 @@ top: 158px;
                 <div>
                     <a href="#" class="item">
                         <span class="circle">4</span>
-                        <span class="text">Payment</span>
+                        <span class="text">Pago </span>
                     </a>
                 </div>
             </li>
@@ -960,7 +960,7 @@ top: 158px;
 
         <div class="language-selector">
             <div class="active-language">
-                English <img src="https://tickets.heinekenexperience.com/static_new/images/language.svg">
+                Espanol <img src="https://tickets.heinekenexperience.com/static_new/images/language.svg">
             </div>
             <div class="languages-selection">
                 <ul class="languages">
@@ -980,13 +980,13 @@ top: 158px;
     <div class="main">
         <div class="page-title">
             <div class="page-wrapper">
-                <h1>Choose your payment method</h1>
+                <h1>Elige un método de pago</h1>
             </div>
         </div>
 
         <form method="post" action="/en/payment/rooftop">
             <div class="page-content">
-                <h2>Summary</h2>
+                <h2>Resumen</h2>
                 <section id="summary-section">
                     <div class="tour-container">
                         <span class="tour">Heineken Experience Tour &amp; rooftop</span>
@@ -999,7 +999,7 @@ top: 158px;
                             <span class="right">€ 27.50</span>
                         </div>
                         <div class="last-row">
-                            <span class="left">Total</span>
+                            <span class="left">Totaal</span>
                             <span class="right">€ 27.50</span>
                         </div>
 
@@ -1008,7 +1008,7 @@ top: 158px;
             </div>
 
             <div class="page-content">
-                <h2 id="payment-options-title">Payment methods</h2>
+                <h2 id="payment-options-title">Métodos de pago</h2>
                 <section>
                     <div class="paymentmethods payment-container icons-payment adyen" id="component-container">
                         <input type="radio" id="paymentradio-applepay" value="applepay" name="paymentradio">
@@ -1041,7 +1041,7 @@ top: 158px;
                 </section>
             </div>
         </form>
-        <a href="#" id="previous-button">Previous step</a>
+        <a href="#" id="previous-button">Paso anterior</a>
     </div>
     <footer class="site-footer">
         <div class="top">
@@ -1116,7 +1116,7 @@ top: 158px;
 
                 <div class="language-selector">
                     <div class="active-language">
-                        English <img src="https://tickets.heinekenexperience.com/static_new/images/language.svg">
+                        Espanol <img src="https://tickets.heinekenexperience.com/static_new/images/language.svg">
                     </div>
                     <div class="languages-selection">
                         <ul class="languages">
