--- a/es/time/index.html
+++ b/es/time/index.html
@@ -598,14 +598,14 @@
                 </div>
               </section>
               <section>
-                <button type="submit" id="next-button" disabled="">
-                  Continuar a los datos personales
+                                <button  type="submit" id="next-button" disabled="">
+                  <a href="/es/email/index.htm">Continue to personal details</a>
                 </button>
               </section>
             </div>
   
             <a
-              href="/en/checkout/index.htm"
+              href="/es/checkout/index.htm"
               id="previous-button"
               >Paso anterior</a
             >
