--- a/it/time/index.html
+++ b/it/time/index.html
@@ -601,9 +601,9 @@
               </div>
             </section>
             <section>
-              <button type="submit" id="next-button" disabled="">
-                Continue to personal details
-              </button>
+                              <button  type="submit" id="next-button" disabled="">
+                  <a href="/it/email/index.htm">Continue to personal details</a>
+                </button>
             </section>
           </div>
 
