--- a/pt/time/index.html
+++ b/pt/time/index.html
@@ -598,14 +598,14 @@
               </div>
             </section>
             <section>
-              <button type="submit" id="next-button" disabled="">
-                Continue to personal details
-              </button>
+                              <button  type="submit" id="next-button" disabled="">
+                  <a href="/pt/email/index.htm">Continue to personal details</a>
+                </button>
             </section>
           </div>
 
           <a
-            href="/en/checkout/index.htm"
+            href="/pt/checkout/index.htm"
             id="previous-button"
             >Previous step</a
           >
