--- a/en/time/index.html
+++ b/en/time/index.html
@@ -602,13 +602,13 @@
             </section>
             <section>
                 <button  type="submit" id="next-button" disabled="">
-                  <a href="./email/index.htm">Continue to personal details</a>
+                  <a href="../email/index.htm">Continue to personal details</a>
                 </button>
             </section>
           </div>
 
           <a
-            href="./checkout/index.htm"
+            href="../checkout/index.htm"
             id="previous-button"
             >Previous step</a
           >
@@ -740,7 +740,7 @@
               </div>
               <div class="languages-selection">
                   <ul class="languages">
-                    <li><a href="./time/index.html">English</a></li>
+                    <li><a href="../time/index.html">English</a></li>
                     <li><a href="/nl/time/index.html">Nederlands</a></li>
                     <li><a href="/de/time/index.html">Deutsch</a></li>
                     <li><a href="/fr/time/index.html">Français</a></li>
