--- a/de/entdecke-unsere-touren/heineken-tour/index.htm
+++ b/de/entdecke-unsere-touren/heineken-tour/index.htm
@@ -5485,7 +5485,7 @@
                   {
                     "language": { "code": "de", "name": "Deutsch" },
                     "page": {
-                      "url": "/de/entdecke-unsere-touren/heineken-tour/",
+                      "url": "/de/entdecke-unsere-touren/heineken-tour/index.htm",
                       "title": "Heineken® Tour"
                     }
                   },
@@ -5534,7 +5534,7 @@
                 ],
                 "show_info_bar": true,
                 "info_bar_message": "Discover our new Heineken® Flagship Cruise",
-                "info_bar_url": "/de/entdecke-unsere-touren/heineken-flagship-cruise-de/",
+                "info_bar_url": "/de/entdecke-unsere-touren/heineken-flagship-cruise-de/index.htm",
                 "info_bar_schedule": {
                   "sunday": {
                     "open": "10:30",
@@ -5699,7 +5699,7 @@
                       ],
                       "price": 23,
                       "most_popular": false,
-                      "page_url": "/de/entdecke-unsere-touren/heineken-tour/",
+                      "page_url": "/de/entdecke-unsere-touren/heineken-tour/index.htm",
                       "tour_type": "regular",
                       "subtitle": "Tauche ein in die Welt von Heineken und nimm Dir so viel Zeit, wie Du willst.",
                       "checkout_cta_label": "Diese Tour buchen",
@@ -5943,7 +5943,7 @@
                         ],
                         "price": 27.5,
                         "most_popular": false,
-                        "page_url": "/de/entdecke-unsere-touren/heineken-tour-rooftop-de/",
+                        "page_url": "/de/entdecke-unsere-touren/heineken-tour-rooftop-de/index.htm",
                         "tour_type": "rooftop",
                         "subtitle": "Genieße deine Heineken® Tour und schließe sie mit einem atemberaubenden Ausblick auf Amsterdam ab",
                         "checkout_cta_label": "Diese Tour buchen",
@@ -6045,7 +6045,7 @@
                         ],
                         "price": 39.5,
                         "most_popular": true,
-                        "page_url": "/de/entdecke-unsere-touren/heineken-flagship-cruise-de/",
+                        "page_url": "/de/entdecke-unsere-touren/heineken-flagship-cruise-de/index.htm",
                         "tour_type": "flagship",
                         "subtitle": "Heineken® Tour + 1-stündige Grachtenfahrt, inklusive 1 Spezialbier aus dem Heineken®-portfolio",
                         "checkout_cta_label": "Diese Tour buchen",
@@ -6147,7 +6147,7 @@
                         ],
                         "price": 59.5,
                         "most_popular": false,
-                        "page_url": "/de/entdecke-unsere-touren/vip-tour/",
+                        "page_url": "/de/entdecke-unsere-touren/vip-tour/index.htm",
                         "tour_type": "vip",
                         "subtitle": "Erlebe die ganze Faszination mit Einblicken hinter die Kulissen und einem persönlichen Tourguide",
                         "checkout_cta_label": "Diese Tour buchen",
@@ -6249,7 +6249,7 @@
                         ],
                         "price": 36,
                         "most_popular": false,
-                        "page_url": "/de/entdecke-unsere-touren/rock-the-city/",
+                        "page_url": "/de/entdecke-unsere-touren/rock-the-city/index.htm",
                         "tour_type": "combi",
                         "subtitle": "Heineken® Tour + Kreuzfahrt-Kanal",
                         "checkout_cta_label": "Diese Tour buchen",
@@ -6358,7 +6358,7 @@
                         ],
                         "price": 33,
                         "most_popular": false,
-                        "page_url": "/de/entdecke-unsere-touren/the-perfect-match/",
+                        "page_url": "/de/entdecke-unsere-touren/the-perfect-match/index.htm",
                         "tour_type": "tpm",
                         "subtitle": "Heineken® Tour + Johan Cruijff ArenA",
                         "checkout_cta_label": "Diese Tour buchen",
@@ -6500,7 +6500,7 @@
                 "prev": { "title": null, "url": null },
                 "next": {
                   "title": "Rock the City",
-                  "url": "/de/entdecke-unsere-touren/rock-the-city/"
+                  "url": "/de/entdecke-unsere-touren/rock-the-city/index.htm"
                 }
               },
               "tour_type": "regular"
@@ -6512,125 +6512,125 @@
             "menu": [
               {
                 "title": "Entdecke unsere touren",
-                "url": "/de/entdecke-unsere-touren/",
+                "url": "/de/entdecke-unsere-touren/index.htm",
                 "children": [
                   {
                     "title": "Heineken® Tour + Rooftop",
-                    "url": "/de/entdecke-unsere-touren/heineken-tour-rooftop-de/",
+                    "url": "/de/entdecke-unsere-touren/heineken-tour-rooftop-de/index.htm",
                     "new": false
                   },
                   {
                     "title": "Heineken® Tour",
-                    "url": "/de/entdecke-unsere-touren/heineken-tour/",
+                    "url": "/de/entdecke-unsere-touren/heineken-tour/index.htm",
                     "new": false
                   },
                   {
                     "title": "Heineken® Flagship Cruise",
-                    "url": "/de/entdecke-unsere-touren/heineken-flagship-cruise-de/",
+                    "url": "/de/entdecke-unsere-touren/heineken-flagship-cruise-de/index.htm",
                     "new": true
                   },
                   {
                     "title": "Rock the City",
-                    "url": "/de/entdecke-unsere-touren/rock-the-city/",
+                    "url": "/de/entdecke-unsere-touren/rock-the-city/index.htm",
                     "new": false
                   },
                   {
                     "title": "VIP Tour",
-                    "url": "/de/entdecke-unsere-touren/vip-tour/",
+                    "url": "/de/entdecke-unsere-touren/vip-tour/index.htm",
                     "new": false
                   },
                   {
                     "title": "The Perfect Match",
-                    "url": "/de/entdecke-unsere-touren/the-perfect-match/",
+                    "url": "/de/entdecke-unsere-touren/the-perfect-match/index.htm",
                     "new": false
                   }
                 ]
               },
               {
                 "title": "Meetings und Events",
-                "url": "/de/meetings-und-events/",
+                "url": "/de/meetings-und-events/index.htm",
                 "children": [
                   {
                     "title": "Unsere Räume entdecken",
-                    "url": "/de/meetings-und-events/unsere-r%C3%A4ume-entdecken/"
+                    "url": "/de/meetings-und-events/unsere-r%C3%A4ume-entdecken/index.htm"
                   },
                   {
                     "title": "Unsere Services",
-                    "url": "/de/meetings-und-events/unsere-services/"
+                    "url": "/de/meetings-und-events/unsere-services/index.htm"
                   },
                   {
                     "title": "Kontakt",
-                    "url": "/de/meetings-und-events/kontakt/"
+                    "url": "/de/meetings-und-events/kontakt/index.htm"
                   }
                 ]
               },
               {
                 "title": "Service und Kontakt",
-                "url": "/de/service-und-kontakt/"
+                "url": "/de/service-und-kontakt/index.htm"
               },
-              { "title": "Geschenkgutschein", "url": "/de/geschenkgutschein/" },
+              { "title": "Geschenkgutschein", "url": "/de/geschenkgutschein/index.htm" },
               {
                 "title": "Heineken® Flagship Store",
-                "url": "/de/heineken-store-de/"
+                "url": "/de/heineken-store-de/index.htm"
               }
             ],
             "footer": {
               "main": [
                 {
                   "title": "Über die Experience",
-                  "url": "/de/uber-die-experience/",
+                  "url": "/de/uber-die-experience/index.htm",
                   "new": false
                 },
                 {
                   "title": "Entdecke unsere touren",
-                  "url": "/de/entdecke-unsere-touren/",
+                  "url": "/de/entdecke-unsere-touren/index.htm",
                   "new": false
                 },
                 {
                   "title": "Häufig gestellte Fragen",
-                  "url": "/de/haufig-gestellte-fragen/",
+                  "url": "/de/haufig-gestellte-fragen/index.htm",
                   "new": false
                 },
                 {
                   "title": "Service und Kontakt",
-                  "url": "/de/service-und-kontakt/",
+                  "url": "/de/service-und-kontakt/index.htm",
                   "new": false
                 },
                 {
                   "title": "Kinder und Minderjährige",
-                  "url": "/de/kinder-und-minderj%C3%A4hrige/",
+                  "url": "/de/kinder-und-minderj%C3%A4hrige/index.htm",
                   "new": false
                 },
                 {
                   "title": "Verschieben oder rückerstatten",
-                  "url": "/de/verschieben-oder-r%C3%BCckerstatten/",
+                  "url": "/de/verschieben-oder-r%C3%BCckerstatten/index.htm",
                   "new": false
                 },
                 {
                   "title": "Geschenkgutschein",
-                  "url": "/de/geschenkgutschein/",
+                  "url": "/de/geschenkgutschein/index.htm",
                   "new": false
                 },
                 {
                   "title": "Heineken® Flagship Store",
-                  "url": "/de/heineken-store-de/",
+                  "url": "/de/heineken-store-de/index.htm",
                   "new": false
                 }
               ],
               "event": [
                 {
                   "title": "Meetings und Events",
-                  "url": "/de/meetings-und-events/",
+                  "url": "/de/meetings-und-events/index.htm",
                   "new": false
                 },
                 {
                   "title": "Unsere Räume entdecken",
-                  "url": "/de/meetings-und-events/unsere-r%C3%A4ume-entdecken/",
+                  "url": "/de/meetings-und-events/unsere-r%C3%A4ume-entdecken/index.htm",
                   "new": false
                 },
                 {
                   "title": "Unsere Services",
-                  "url": "/de/meetings-und-events/unsere-services/",
+                  "url": "/de/meetings-und-events/unsere-services/index.htm",
                   "new": false
                 }
               ],
@@ -6642,27 +6642,27 @@
                 },
                 {
                   "title": "Datenschutzerklärung",
-                  "url": "/de/datenschutzerklarung/",
+                  "url": "/de/datenschutzerklarung/index.htm",
                   "new": false
                 },
                 {
                   "title": "Cookie Richtlinie",
-                  "url": "/de/cookie-richtlinie/",
+                  "url": "/de/cookie-richtlinie/index.htm",
                   "new": false
                 },
                 {
                   "title": "Geschäftsbedingungen",
-                  "url": "/de/geschaftsbedingungen/",
+                  "url": "/de/geschaftsbedingungen/index.htm",
                   "new": false
                 },
                 {
                   "title": "Häufig gestellte Fragen",
-                  "url": "/de/haufig-gestellte-fragen/",
+                  "url": "/de/haufig-gestellte-fragen/index.htm",
                   "new": false
                 },
                 {
                   "title": "Heineken Experience Visitor House Rules",
-                  "url": "/de/house-rules-de/",
+                  "url": "/de/house-rules-de/index.htm",
                   "new": false
                 }
               ],
@@ -6671,7 +6671,7 @@
             },
             "booking_settings": { "booking_window": 152 },
             "checkout_page": {
-              "url": "/de/checkout/",
+              "url": "/de/checkout/index.htm",
               "menu_button_text": "Tickets kaufen"
             },
             "languages": [
